syntax = "proto3";

package proto;

message Vacio{}

message Estado{
    string estado = 1;
}

message Consulta{
    string nombreDominio = 1;
    string ip = 2;
    string port = 3;
}

message ConsultaAdmin{
    string nombreDominio = 1;
}


message ConsultaUpdate{
    string nombreDominio = 1;
    string opcion = 2;
    string param = 3;
}

message Respuesta{
    string ip = 1;
    string port = 2;
    string respuesta = 3;
    repeated int32 reloj = 4;
}

message RespuestaAdmin{
    repeated int32 reloj = 1;
}

message File{
    string fileInfo = 1;
    bytes chunkData = 2;
}

message Dominios{
    repeated string dominios = 1;
}

service ServicioNodo{
    rpc ObtenerEstado(Consulta) returns(Estado);
    rpc Get(Consulta) returns(Respuesta);
    rpc Create(Consulta) returns(Respuesta);
    rpc Delete(ConsultaAdmin) returns(RespuestaAdmin);
    rpc Update(ConsultaUpdate) returns(RespuestaAdmin);
    rpc GetFile(Consulta) returns (stream File);
    rpc SetFile(stream File) returns(Estado);
    rpc GetDominios(Vacio) returns(Dominios);
}